--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -8,9 +8,9 @@
     </p>
     
     <div style="text-align: center;">
-        <a href="/game" class="btn">Join Game as Team</a>
-        <a href="/admin" class="btn btn-secondary">Game Admin</a>
-        <a href="/qr" class="btn btn-secondary">Show QR Code</a>
+        <a href="/game/game" class="btn">Join Game as Team</a>
+        <a href="/game/admin" class="btn btn-secondary">Game Admin</a>
+        <a href="/game/qr" class="btn btn-secondary">Show QR Code</a>
     </div>
 </div>
 {% endblock %}
