--- a/game/templates/admin.html
+++ b/game/templates/admin.html
@@ -50,7 +50,7 @@
 let adminInterval = setInterval(updateAdminStatus, 2000);
 
 function updateAdminStatus() {
-    fetch('/api/game_status')
+    fetch('/game/api/game_status')
     .then(response => response.json())
     .then(data => {
         document.getElementById('currentQ').textContent = data.current_question;
@@ -95,7 +95,7 @@ function updateAdminStatus() {
 }
 
 function updateScores() {
-    fetch('/api/scores')
+    fetch('/game/api/scores')
     .then(response => response.json())
     .then(data => {
         const tbody = document.querySelector('#liveScores tbody');
@@ -111,7 +111,7 @@ function updateScores() {
 }
 
 function startQuestion() {
-    fetch('/api/start_question', {method: 'POST'})
+    fetch('/game/api/start_question', {method: 'POST'})
     .then(response => response.json())
     .then(data => {
         if (data.success) {
@@ -123,7 +123,7 @@ function startQuestion() {
 }
 
 function showAnswer() {
-    fetch('/api/show_answer', {method: 'POST'})
+    fetch('/game/api/show_answer', {method: 'POST'})
     .then(response => response.json())
     .then(data => {
         if (data.success) {
@@ -133,7 +133,7 @@ function showAnswer() {
 }
 
 function startIntermission() {
-    fetch('/api/start_intermission', {method: 'POST'})
+    fetch('/game/api/start_intermission', {method: 'POST'})
     .then(response => response.json())
     .then(data => {
         if (data.success) {
@@ -143,7 +143,7 @@ function startIntermission() {
 }
 
 function nextQuestion() {
-    fetch('/api/next_question', {method: 'POST'})
+    fetch('/game/api/next_question', {method: 'POST'})
     .then(response => response.json())
     .then(data => {
         if (data.success) {
@@ -159,7 +159,7 @@ function showScores() {
 
 function resetGame() {
     if (confirm('Are you sure you want to reset the entire game?')) {
-        fetch('/api/reset_game', {method: 'POST'})
+        fetch('/game/api/reset_game', {method: 'POST'})
         .then(response => response.json())
         .then(data => {
             if (data.success) {
